# BPEVectorizer

./: .gitignore  README.md  pyproject.toml  setup.py
bpe_vectorizer/: _vectorize_bpe_output_cy.pyx
bpe_vectorizer_/: __init__.py  bpe_vectorizer.py
tests/: test_bpe_vectorizer.py
